Added a method in the VirtualBoxManager class to create a VM from the given arguments